test/cases/bad/bad036.lat
// Not a subclass

class A {

}

class B extends A {

}

int main() {
    // A a = new A; // ok
    B b = new A;

    return 0;
}